<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/droid_desserts"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:clickable="true"
        android:contentDescription="@string/donuts"
        app:layout_constraintBottom_toTopOf="@+id/froyo"
        app:layout_constraintRight_toLeftOf="@+id/donutDescriptionView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textIntro"
        app:srcCompat="@drawable/donut_circle"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:clickable="true"
        android:contentDescription="@string/froyo"
        app:layout_constraintBottom_toTopOf="@+id/iceCream"
        app:layout_constraintRight_toLeftOf="@+id/froyoDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donut"
        app:srcCompat="@drawable/froyo_circle" />

    <ImageView
        android:id="@+id/iceCream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:clickable="true"
        android:contentDescription="@string/ice_cream_sandwiches"
        app:layout_constraintBottom_toBottomOf="@id/iceCreamDescription"
        app:layout_constraintRight_toLeftOf="@+id/iceCreamDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/froyo"
        app:srcCompat="@drawable/icecream_circle" />

    <TextView
        android:id="@+id/donutDescriptionView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/donuts"
        android:textIsSelectable="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/donut"
        app:layout_constraintEnd_toStartOf="@id/editDonutDescription"
        app:layout_constraintStart_toEndOf="@+id/donut"
        app:layout_constraintTop_toTopOf="@+id/donut" />

    <EditText
        android:id="@+id/editDonutDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/enter_description"
        android:inputType="text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/donutDescriptionView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/donutDescriptionView"
        app:layout_constraintTop_toTopOf="@id/donutDescriptionView" />

    <TextView
        android:id="@+id/froyoDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/froyo"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/froyo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/froyo"
        app:layout_constraintTop_toTopOf="@+id/froyo" />

    <TextView
        android:id="@+id/iceCreamDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/ice_cream_sandwiches"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/iceCream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iceCream"
        app:layout_constraintTop_toTopOf="@+id/iceCream" />

</androidx.constraintlayout.widget.ConstraintLayout>