<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.DroidCafe.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.DroidCafe.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/orderMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:textIsSelectable="true"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/name"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/nameEdit"
                app:layout_constraintEnd_toStartOf="@+id/nameEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/nameEdit"/>

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/addressEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nameText"
                app:layout_constraintTop_toBottomOf="@+id/orderMessage"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/addressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/address"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/addressEdit"
                app:layout_constraintEnd_toStartOf="@+id/addressEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/addressEdit"/>

            <EditText
                android:id="@+id/addressEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/phoneEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/addressText"
                app:layout_constraintTop_toBottomOf="@+id/nameEdit"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/phoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/phone"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/phoneEdit"
                app:layout_constraintEnd_toStartOf="@+id/phoneEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/phoneEdit"/>

            <EditText
                android:id="@+id/phoneEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:digits="1234567890"
                android:ems="10"
                android:imeOptions="actionSend"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="10"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/noteEdit"
                app:layout_constraintEnd_toStartOf="@+id/phoneType"
                app:layout_constraintStart_toEndOf="@+id/phoneText"
                app:layout_constraintTop_toBottomOf="@+id/addressEdit"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/phoneType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@id/noteEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/phoneEdit"
                app:layout_constraintTop_toBottomOf="@+id/addressEdit"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/noteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/note"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/noteEdit"
                app:layout_constraintBottom_toBottomOf="@id/noteEdit"
                app:layout_constraintEnd_toStartOf="@+id/noteEdit"/>

            <EditText
                android:id="@+id/noteEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="2"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/deliveryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/noteText"
                app:layout_constraintTop_toBottomOf="@+id/phoneEdit"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/deliveryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/choose_delivery_method"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteEdit"
                app:layout_constraintBottom_toTopOf="@id/deliveryRadioGroup"
                app:layout_constraintEnd_toEndOf="parent"/>

            <RadioGroup
                android:id="@+id/deliveryRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deliveryText"
                app:layout_constraintBottom_toTopOf="@+id/buttonPickupDate"
                app:layout_constraintEnd_toEndOf="parent">

                <RadioButton
                    android:id="@+id/sameDayRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/same_day_messenger_service"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/nextDayRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/next_day_ground_delivery"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/pickUpRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/pick_up"
                    android:textSize="18sp" />
            </RadioGroup>

            <Button
                android:id="@+id/buttonPickupDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/pick_up_date"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/pickUpDateText"
                app:layout_constraintStart_toStartOf="@id/deliveryRadioGroup"
                app:layout_constraintTop_toBottomOf="@+id/deliveryRadioGroup"
                app:layout_constraintEnd_toStartOf="@id/buttonPickupTime"/>

            <Button
                android:id="@+id/buttonPickupTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/pick_up_time"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/deliveryRadioGroup"
                app:layout_constraintStart_toEndOf="@+id/buttonPickupDate"
                app:layout_constraintBottom_toTopOf="@id/pickUpTimeText"
                app:layout_constraintEnd_toEndOf="@id/deliveryRadioGroup"
                />

            <TextView
                android:id="@+id/pickUpDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/date"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/buttonPickupDate"
                app:layout_constraintTop_toBottomOf="@+id/buttonPickupDate"
                app:layout_constraintEnd_toEndOf="@+id/buttonPickupDate"/>

            <TextView
                android:id="@+id/pickUpTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/time"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/buttonPickupTime"
                app:layout_constraintTop_toBottomOf="@id/buttonPickupTime"
                app:layout_constraintEnd_toEndOf="@id/buttonPickupTime"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>